--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,35 +3,41 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - main    # Trigger เมื่อมีการ Push เข้า Branch 'main'
   pull_request:
     branches:
-      - main
+      - main    # Trigger เมื่อมี Pull Request เข้า Branch 'main'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # ดึงโค้ดจาก GitHub Repository
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '16'       # ใช้ Node.js เวอร์ชัน 16
 
       - name: Install dependencies
-        run: npm install
+        run: npm install           # ติดตั้ง Dependencies
 
       - name: Run tests
-        run: npm test
+        run: npm test              # รันคำสั่งเทส
 
   deploy:
-    needs: build
+    needs: build                  # เริ่ม deploy หลังจาก build สำเร็จ
     runs-on: ubuntu-latest
+
     steps:
-      - name: Deploy application
-        run: |
-          echo "Deploying application..."
-          # เพิ่มขั้นตอนการ deploy ตามที่ต้องการ เช่น
-          # aws s3 sync ./dist s3://your-bucket-name/
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Login to Heroku
+        uses: akhileshns/heroku-deploy@v4.1.8
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}    # ใช้ API Key จาก Secrets
+          heroku_app_name: "your-app-name"                # ชื่อแอปใน Heroku
+          heroku_email: "your-email@example.com"          # อีเมลบัญชี Heroku
